MDEV-32012 hash unique corrupts index on virtual blobs

as always when copying record[0] aside one needs to detach
Field_blob::value's from it, and restore them when record[0]
is restored from a backup.